@@ -71,7 +71,7 @@
 	    Turn on gzip compression of output.
 	  </dd><dt><span class="term"><tt class="option">--html</tt></span></dt><dd>
 	    Use the <span class="acronym">HTML</span> parser.
-	  </dd><dt><span class="term"><tt class="option">--xmlout</tt></span></dt><dd>Used in conjusntion with <tt class="option">--html</tt>. Usually
+	  </dd><dt><span class="term"><tt class="option">--xmlout</tt></span></dt><dd>Used in conjunction with <tt class="option">--html</tt>. Usually
   when HTML is parsed the document is saved with the HTML serializer, but with
   this option the resulting document is saved with the XML serializer. This is
   primarily used to generate XHTML from HTML input.</dd><dt><span class="term"><tt class="option">--push</tt></span></dt><dd>
