@@ -376,7 +376,7 @@
       <varlistentry>
 	<term><option>--xmlout</option></term>
 	<listitem>
-	  <simpara>Used in conjusntion with <option>--html</option>. Usually
+	  <simpara>Used in conjunction with <option>--html</option>. Usually
   when HTML is parsed the document is saved with the HTML serializer, but with
   this option the resulting document is saved with the XML serializer. This is
   primarily used to generate XHTML from HTML input.</simpara>
